--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a react project demo",
   "private": true,
   "scripts": {
+    "doiuse": "doiuse --browsers 'ie >= 9, > 1%, last 2 versions' dist/*.css",
     "update": "ncu -a",
     "clean:dist": "rm -rf dist/*",
     "build": "npm run clean:dist && NODE_ENV=prod webpack --config webpack.config.babel.js --progress --colors",
@@ -24,26 +25,29 @@
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.11.6",
     "css-loader": "^0.23.1",
+    "doiuse": "^2.4.1",
     "eslint": "^3.3.1",
     "eslint-config-airbnb": "^10.0.1",
     "eslint-import-resolver-webpack": "^0.5.1",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-react": "^6.1.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "node-sass": "^3.8.0",
     "npm-check-updates": "^2.8.0",
+    "postcss-color-rgba-fallback": "^2.2.0",
     "postcss-cssnext": "^2.7.0",
+    "postcss-flexbugs-fixes": "^2.0.0",
+    "postcss-flexibility": "^1.1.0",
     "postcss-font-normalize": "0.0.0",
     "postcss-loader": "^0.10.1",
+    "postcss-opacity": "^4.0.0",
     "postcss-pseudoelements": "^3.0.0",
+    "postcss-reporter": "^1.4.1",
     "postcss-will-change": "^1.1.0",
     "redux-devtools": "^3.3.1",
     "resolve-url-loader": "^1.6.0",
@@ -59,13 +63,9 @@
     "webpack-strip": "^0.1.0"
   },
   "dependencies": {
+    "calc-polyfill": "^0.1.0",
     "font-awesome": "^4.6.3",
-    "immutable": "^3.8.1",
     "normalize.css": "^4.2.0",
-    "normalizr": "^2.2.1",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-helmet": "^3.1.0",
-    "react-router": "^2.7.0"
+    "normalizr": "^2.2.1"
   }
 }
