--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-react",
+  "name": "webpack-demo",
   "version": "1.0.0",
-  "description": "A Webpack sample project, configured for ES6 React and SCSS",
+  "description": "A Webpack sample project, configured for ES6 and SCSS",
   "private": true,
   "scripts": {
     "stylefmt": "gulp stylefmt",
@@ -11,7 +11,6 @@
     "start": "NODE_ENV=dev webpack-dev-server --config webpack.config.babel.js"
   },
   "keywords": [
-    "react",
     "webpack",
     "gulp"
   ],
@@ -22,12 +21,10 @@
   "author": "https://github.com/liu-dongyu",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^6.4.1",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.14.0",
     "css-loader": "^0.25.0",
@@ -37,8 +34,6 @@
     "eslint-import-resolver-webpack": "^0.5.1",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.2.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
@@ -46,6 +41,7 @@
     "gulp-html-minify": "0.0.14",
     "gulp-stylefmt": "^1.0.0",
     "gulp-uglify": "^2.0.0",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
     "node-sass": "^3.9.3",
     "npm-check-updates": "^2.8.0",
@@ -57,7 +53,6 @@
     "postcss-loader": "^0.13.0",
     "postcss-reporter": "^1.4.1",
     "postcss-safe-parser": "^2.0.0",
-    "redux-devtools": "^3.3.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "stylelint": "^7.2.0",
@@ -71,12 +66,6 @@
   },
   "dependencies": {
     "flexibility": "^2.0.1",
-    "immutable": "^3.8.1",
-    "normalize.css": "^4.2.0",
-    "normalizr": "^2.2.1",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-helmet": "^3.1.0",
-    "react-router": "^2.8.0"
+    "normalize.css": "^4.2.0"
   }
 }
